Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
reactos-bootcd-0.4.16-dev-12-gbad0dd5-x86-gcc-lin-dbg
- Open Regedit
- Open a key so that "adress bar" gets a long content
- Reduce regedit width below displayed text in adress bar
- Type free text
Text gets "deleted" from 1st character for no reason
ends up in a crash due to exception breakpoint- Video : ReactOS-screen0.webm

*** Assertion failed: RtlTestBit(&Heap->FreeHintBitmap, HintIndex)
|
*** Source File: /srv/buildbot/worker_data/Build_GCCLin_x86/build/sdk/lib/rtl/heap.c, line 448Break repeatedly, break Once, Ignore, terminate Process or terminate Thread (boipt)? |
kdb:> b
|
Execute '.cxr 0022F190' to dump context |
Unhandled exception
|
ExceptionCode: 80000003 |
CS:EIP 1b:7c96619a
|
DS 23 ES 23 FS 3b GS 0 |
EAX: 00000000 EBX: 7c97af40 ECX: 0022ef38 |
EDX: 00000028 EBP: 0022f470 ESI: 0022f45e ESP: 0022f174 |
EDI: 000001c0 EFLAGS: 00000212 Address: |
* <ntdll.dll:4619a (:0 (DbgUserBreakPoint))> (C:\ReactOS\System32\ntdll.dll@7c920000) |
Frames:
|
* <ntdll.dll:25c17 (sdk/lib/rtl/heap.c:448 (RtlpRemoveFreeBlock))> (C:\ReactOS\System32\ntdll.dll@7c920000) |
* <ntdll.dll:27375 (sdk/lib/rtl/heap.c:1245 (RtlpCoalesceFreeBlocks))> (C:\ReactOS\System32\ntdll.dll@7c920000) |
* <ntdll.dll:2831d (sdk/lib/rtl/heap.c:2378 (RtlFreeHeap))> (C:\ReactOS\System32\ntdll.dll@7c920000) |
* <usp10.dll:18518 (sdk/include/reactos/wine/heap.h:46 (ScriptStringFree))> (C:\ReactOS\system32\usp10.dll@79840000) |
* <comctl32.dll:22e13 (dll/win32/comctl32/edit.c:326 (EDIT_EM_ReplaceSel))> (C:\ReactOS\winsxs\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef\comctl32.dll@7bdd0000) |
* <comctl32.dll:23b2d (dll/win32/comctl32/edit.c:3159 (EDIT_WM_Char))> (C:\ReactOS\winsxs\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef\comctl32.dll@7bdd0000) |
* <comctl32.dll:24ccc (dll/win32/comctl32/edit.c:4991 (EDIT_WindowProc))> (C:\ReactOS\winsxs\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef\comctl32.dll@7bdd0000) |
* <user32.dll:6b47e (win32ss/user/user32/windows/wndproc_fixup.S:48 (CALL_EXTERN_WNDPROC))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5f71c (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5fcc6 (win32ss/user/user32/windows/message.c:1872 (CallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <comctl32.dll:15ab7 (dll/win32/comctl32/commctrl.c:1521 (DefSubclassProc))> (C:\ReactOS\winsxs\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef\comctl32.dll@7bdd0000) |
* <browseui.dll:22e36 (dll/win32/browseui/CAutoComplete.cpp:1001 (CAutoComplete::OnEditChar))> (C:\ReactOS\System32\browseui.dll@78da0000) |
* <browseui.dll:1ffb5 (dll/win32/browseui/CAutoComplete.cpp:306 (CAutoComplete::EditWndProc))> (C:\ReactOS\System32\browseui.dll@78da0000) |
* <browseui.dll:1fe6d (dll/win32/browseui/CAutoComplete.cpp:296 (EditSubclassProc))> (C:\ReactOS\System32\browseui.dll@78da0000) |
* <comctl32.dll:159db (dll/win32/comctl32/commctrl.c:1528 (DefSubclassProc))> (C:\ReactOS\winsxs\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef\comctl32.dll@7bdd0000) |
* <comctl32.dll:15b44 (dll/win32/comctl32/commctrl.c:1470 (COMCTL32_SubclassProc))> (C:\ReactOS\winsxs\x86_microsoft.windows.common-controls_6595b64144ccf1df_6.0.2600.2982_none_deadbeef\comctl32.dll@7bdd0000) |
* <user32.dll:6b47e (win32ss/user/user32/windows/wndproc_fixup.S:48 (CALL_EXTERN_WNDPROC))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5f71c (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5fcc6 (win32ss/user/user32/windows/message.c:1872 (CallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <regedit.exe:119d (base/applications/regedit/childwnd.c:296 (AddressBarProc))> (C:\ReactOS\regedit.exe@400000) |
* <user32.dll:6b47e (win32ss/user/user32/windows/wndproc_fixup.S:48 (CALL_EXTERN_WNDPROC))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5f71c (win32ss/user/user32/windows/message.c:1547 (IntCallWindowProcW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:5fb36 (win32ss/user/user32/windows/message.c:1798 (IntCallMessageProc))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <user32.dll:602a7 (win32ss/user/user32/windows/message.c:2046 (DispatchMessageW))> (C:\ReactOS\system32\user32.dll@77a20000) |
* <regedit.exe:11366 (base/applications/regedit/main.c:226 (wWinMain))> (C:\ReactOS\regedit.exe@400000) |
* <regedit.exe:19dc5 (sdk/lib/crt/startup/crt0_w.c:24 (wmain))> (C:\ReactOS\regedit.exe@400000) |
* <regedit.exe:1944b (sdk/lib/crt/startup/crtexe.c:306 (__tmainCRTStartup))> (C:\ReactOS\regedit.exe@400000) |
* <regedit.exe:194a0 (sdk/lib/crt/startup/crtexe.c:162 (wWinMainCRTStartup))> (C:\ReactOS\regedit.exe@400000) |
* <kernel32.dll:11cde (dll/win32/kernel32/client/proc.c:463 (BaseProcessStartup))> (C:\ReactOS\system32\kernel32.dll@7c5e0000) |
