[COMCTL32] Fix a heap corruption in EDIT_EM_ReplaceSel

https://jira.reactos.org/browse/CORE-19743